--- a/ws/package.json
+++ b/ws/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "backend-http",
+  "name": "ws",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -b",
     "start": "node dist/index.js",
-    "dev": "npm run build && set WITH_SNAPSHOT=true && npm run start",
-    "test": "vitest"
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.21",
     "@types/redis": "^4.0.11",
-    "express": "^4.19.2",
-    "vitest": "^1.6.0"
+    "@types/ws": "^8.5.10",
+    "redis": "^4.6.14",
+    "ws": "^8.17.1"
   }
 }
